Updated descriptive tables

--- a/new_pages/iteration.qmd
+++ b/new_pages/iteration.qmd
@@ -918,9 +918,7 @@ combined %>%
 
 The function `pmap()` from the **purrr** package allows us to apply `map_*()` functions over multiple vectors. The "p" in `pmap()` stands for parallel. It works down a a dataset or list sequentially, carrying out your operation. Note, it does **not** refer to parallel [computing](https://bookdown.org/rdpeng/rprogdatascience/parallel-computation.html).
 
-In `pmap()` you specify a single dataset, or list that contains all of the vectors, or lists, that you want to supply your function. 
-
-This can allow you to very quickly carry out calculations with multiple columns of a dataframe, or lists of information.
+In `pmap()` you specify a single dataset, or list that contains all of the vectors, or lists, that you want to supply your function. This can allow you to very quickly carry out calculations with multiple columns of a dataframe, or lists of information.
 
 For example, here is a simple dataset of three numbers.
 
